feat: 加入代码编辑器和商品规格选择组件

--- a/components.json
+++ b/components.json
@@ -1,3 +1,5 @@
 {
-  "Flow": "./src/components/Flow/index.js"
+  "Flow": "./src/components/Flow/index.js",
+  "BraceEditor": "./src/components/BraceEditor/index.js",
+  "SkuChoose": "./src/components/SkuChoose/index.js"
 }
