--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hilbert-vue-ui",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "hilbert-vue-ui",
   "main": "lib/hilbert-vue.min.js",
   "scripts": {
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/Hilbertangers/hilbert-vue-ui",
   "license": "ISC",
   "dependencies": {
+    "brace": "^0.11.1",
     "element-resize-detector": "^1.2.0"
   },
   "devDependencies": {
