feat: add numberRoll 数字滚动

--- a/components.json
+++ b/components.json
@@ -1,5 +1,6 @@
 {
   "Flow": "./src/components/Flow/index.js",
   "BraceEditor": "./src/components/BraceEditor/index.js",
-  "SkuChoose": "./src/components/SkuChoose/index.js"
+  "SkuChoose": "./src/components/SkuChoose/index.js",
+  "NumberRoll": "./src/components/NumberRoll/index.js"
 }
