--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hilbert-vue-ui",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "hilbert-vue-ui",
   "main": "lib/hilbert-vue.min.js",
   "scripts": {
@@ -48,6 +48,7 @@
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
     "url-loader": "^1.1.2",
+    "view-design": "^4.7.0",
     "vue": "^2.6.11",
     "vue-jest": "^3.0.5",
     "vue-loader": "^15.9.1",
