--- a/components.json
+++ b/components.json
@@ -4,5 +4,6 @@
   "SkuChoose": "./src/components/SkuChoose/index.js",
   "NumberRoll": "./src/components/NumberRoll/index.js",
   "BulbSwitch": "./src/components/BulbSwitch/index.js",
-  "MultiDonutChart": "./src/components/MultiDonutChart/index.js"
+  "MultiDonutChart": "./src/components/MultiDonutChart/index.js",
+  "SignaturePad": "./src/components/SignaturePad/index.js"
 }
