--- a/components.json
+++ b/components.json
@@ -5,5 +5,6 @@
   "NumberRoll": "./src/components/NumberRoll/index.js",
   "BulbSwitch": "./src/components/BulbSwitch/index.js",
   "MultiDonutChart": "./src/components/MultiDonutChart/index.js",
-  "SignaturePad": "./src/components/SignaturePad/index.js"
+  "SignaturePad": "./src/components/SignaturePad/index.js",
+  "Spotlight": "./src/components/Spotlight/index.js"
 }
