--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "brace": "^0.11.1",
     "echarts": "^5.4.3",
     "element-resize-detector": "^1.2.0",
+    "fuse.js": "^7.0.0",
     "gh-pages": "^1.2.0"
   },
   "devDependencies": {
