--- a/components.json
+++ b/components.json
@@ -6,5 +6,6 @@
   "BulbSwitch": "./src/components/BulbSwitch/index.js",
   "MultiDonutChart": "./src/components/MultiDonutChart/index.js",
   "SignaturePad": "./src/components/SignaturePad/index.js",
-  "Spotlight": "./src/components/Spotlight/index.js"
+  "Spotlight": "./src/components/Spotlight/index.js",
+  "PinInput": "./src/components/PinInput/index.js"
 }
