--- a/components.json
+++ b/components.json
@@ -8,5 +8,6 @@
   "SignaturePad": "./src/components/SignaturePad/index.js",
   "Spotlight": "./src/components/Spotlight/index.js",
   "PinInput": "./src/components/PinInput/index.js",
-  "AngleSlider": "./src/components/AngleSlider/index.js"
+  "AngleSlider": "./src/components/AngleSlider/index.js",
+  "Screenshots": "./src/components/Screenshots/index.js"
 }
